# backend/cmd/CVSeeker/internal/providers/router.go
@@ -30,16 +30,12 @@ func setupRouter(hs *handlers.Handlers) ginServer.GinRoutingFn {
 
 		data := baseRoute.Group("/resumes")
 		{
-			data.POST("/upload", hs.DataProcessingHandler.ProcessDataHandler())
-
+			data.POST("", hs.DataProcessingHandler.ProcessDataHandler())
 			data.GET("/search", hs.SearchHandler.HybridSearch())
 			data.GET("/:id", hs.SearchHandler.GetDocumentByID())
-
 			data.POST("/thread/start", hs.ChatbotHandler.StartChatSession())
 			data.POST("/thread/:threadId/send", hs.ChatbotHandler.SendMessage())
 			data.GET("/thread/:threadId/messages", hs.ChatbotHandler.ListMessage())
-			data.GET("/thread", hs.ChatbotHandler.GetAllThreads())
-			data.GET("/thread/:threadId", hs.ChatbotHandler.GetResumesByThreadID())
 		}
 
 	}
