# backend/docs/swagger.json
@@ -16,8 +16,72 @@
         "version": "1.0"
     },
     "host": "localhost:8080",
+    "basePath": "/cvseeker/resumes",
     "paths": {
-        "/cvseeker/resumes/search": {
+        "/": {
+            "post": {
+                "description": "Processes uploaded resume files and associated metadata",
+                "consumes": [
+                    "multipart/form-data"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Data Processing"
+                ],
+                "summary": "Processes resume data",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Full text of the resume",
+                        "name": "fullText",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "file",
+                        "description": "Upload file",
+                        "name": "file",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/meta.BasicResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/meta.Error"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/meta.Error"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/meta.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/meta.Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/search": {
             "get": {
                 "description": "Executes a search combining keyword and vector-based queries with customizable boosting on the vector component.",
                 "consumes": [
@@ -94,44 +158,9 @@
                 }
             }
         },
-        "/cvseeker/resumes/thread": {
-            "get": {
-                "description": "Retrieves all thread IDs from the database.",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Chatbot"
-                ],
-                "summary": "Get all thread IDs",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/meta.BasicResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/meta.Error"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/meta.Error"
-                        }
-                    }
-                }
-            }
-        },
-        "/cvseeker/resumes/thread/start": {
+        "/thread/start": {
             "post": {
-                "description": "Starts a new chat session by creating an assistant and a thread, using specified documents.",
+                "description": "Starts a new chat session by creating an gpt and a thread.",
                 "consumes": [
                     "application/json"
                 ],
@@ -142,15 +171,6 @@
                     "Chatbot"
                 ],
                 "summary": "Start a new chat session",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Comma-separated list of document IDs",
-                        "name": "ids",
-                        "in": "query",
-                        "required": true
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -173,51 +193,7 @@
                 }
             }
         },
-        "/cvseeker/resumes/thread/{threadId}": {
-            "get": {
-                "description": "Retrieves all resume IDs associated with a given thread ID.",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Chatbot"
-                ],
-                "summary": "Get resume IDs by thread ID",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Thread ID",
-                        "name": "threadId",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/meta.BasicResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/meta.Error"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/meta.Error"
-                        }
-                    }
-                }
-            }
-        },
-        "/cvseeker/resumes/thread/{threadId}/messages": {
+        "/thread/{threadId}/messages": {
             "get": {
                 "security": [
                     {
@@ -278,9 +254,9 @@
                 }
             }
         },
-        "/cvseeker/resumes/thread/{threadId}/send": {
+        "/thread/{threadId}/send": {
             "post": {
-                "description": "Sends a message to the specified chat session using message content provided in the request body.",
+                "description": "Sends a message to the specified chat session.",
                 "consumes": [
                     "application/json"
                 ],
@@ -300,63 +276,17 @@
                         "required": true
                     },
                     {
-                        "description": "Message content",
-                        "name": "body",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/dtos.QueryContent"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/meta.BasicResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/meta.Error"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/meta.Error"
-                        }
-                    }
-                }
-            }
-        },
-        "/cvseeker/resumes/update": {
-            "post": {
-                "description": "Processes uploaded resume files and associated metadata",
-                "consumes": [
-                    "multipart/form-data"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Data Processing"
-                ],
-                "summary": "Processes resume data",
-                "parameters": [
-                    {
                         "type": "string",
-                        "description": "Full text of the resume",
-                        "name": "fullText",
+                        "description": "Message content",
+                        "name": "content",
                         "in": "query",
                         "required": true
                     },
                     {
-                        "type": "file",
-                        "description": "Upload file",
-                        "name": "file",
-                        "in": "formData",
+                        "type": "string",
+                        "description": "Id List",
+                        "name": "idList",
+                        "in": "query",
                         "required": true
                     }
                 ],
@@ -373,18 +303,6 @@
                             "$ref": "#/definitions/meta.Error"
                         }
                     },
-                    "401": {
-                        "description": "Unauthorized",
-                        "schema": {
-                            "$ref": "#/definitions/meta.Error"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/meta.Error"
-                        }
-                    },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
@@ -394,7 +312,7 @@
                 }
             }
         },
-        "/cvseeker/resumes/{id}": {
+        "/{id}": {
             "get": {
                 "description": "Retrieves a document by its ID from the Elasticsearch index.",
                 "consumes": [
@@ -452,14 +370,6 @@
         }
     },
     "definitions": {
-        "dtos.QueryContent": {
-            "type": "object",
-            "properties": {
-                "content": {
-                    "type": "string"
-                }
-            }
-        },
         "meta.BasicResponse": {
             "type": "object",
             "properties": {
